--- a/homepage.html
+++ b/homepage.html
@@ -47,7 +47,20 @@
 			</div>
 		</div>
 
+
+		<!-- Map Quiz -->
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-body">
+					<a id="finish-quiz-btn" class="btn btn-info refresh-button" ng-click="finishQuiz()">I have finished the quiz</a>
+					<iframe id="quiz-iframe" ng-src="{{quizLink}}" width="100%" height="700px" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+
+
 		<!-- Wiki -->
+		<!--
 		<div class="col-sm-6">
 			<div class="wikipedia panel panel-primary">
 				<a ng-href="https://en.wikipedia.org/?curid={{wiki.pageid}}" target="_blank">
@@ -64,6 +77,7 @@
 				</div>
 			</div>
 		</div>
+		-->
 	</div>
 </body>
 </html>
